--- a/golang/web-dev/tpl3.gohtml
+++ b/golang/web-dev/tpl3.gohtml
@@ -6,8 +6,13 @@
 	<title>Hello World</title>
 	</head>
 	<body>
-	{{$var:=.}}
-	<h1>desh ka gaddaron ka khatma karenge {{$var}}</h1>	
+	<ul>
+	
+	{{range .}}
+	<li>{{.}}</li>
+	{{end}}
+
+	</ul>
 	</body>
 	</html>
 	
