--- a/golang/web-dev/struct.gohtml
+++ b/golang/web-dev/struct.gohtml
@@ -5,13 +5,9 @@
 		<title>Hello World</title>
 		</head>
 	<body>
-		<ul>
 		
-		{{range $index,$val:= .}}
-		<li>{{$index}}: {{$val}}</li>
-		{{end}}
-
-		</ul>
+		<h1>{{.Name}}: {{.Players}}</h1>
+		
 	</body>
 </html>
 	
