color schemes for 3 column layout

--- a/projects/converter/frontend/converter-ui/src/App.css
+++ b/projects/converter/frontend/converter-ui/src/App.css
@@ -8,13 +8,13 @@
 
 .left, .right {
   width: 25%;
-  background-color: cornflowerblue;
+  background-color:floralwhite;
   
 }
 
 .middle {
   width: 50%;
-  background-color: floralwhite;
+  background-color:whitesmoke;
 }
 
 /* Clear floats after the columns */
