--- a/FrontEnd/react/react-basics/react-basics/src/App.css
+++ b/FrontEnd/react/react-basics/react-basics/src/App.css
@@ -12,7 +12,15 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.searchbox {
+  margin-top: 100px;
+  text-align: left;
+  width: 500px;
+  margin-bottom: 100px;
+  height: 20px;
+  text-decoration: solid;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
